[metadata]
name = ui24rsc
url = https://github.com/dmotte/ui24rsc
download_url = https://pypi.org/project/ui24rsc/
author = dmotte
license = MIT
description = Ui24R Snapshot Converter
long_description = file:README.md
long_description_content_type = text/markdown
keywords = soundcraft ui24r yaml converter diff json tree command snapshot yml mixer dots structured full dotted dotted-format
classifiers =
    Intended Audience :: End Users/Desktop
    Environment :: Console
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Terminals
    Topic :: Utilities

# This version number will be replaced with the current git tag by the
# release.yml workflow
version = 0

[options]
include_package_data = true
install_requires =
    PyYAML >= 5.4.1
python_requires = >=3.9.1
packages = ui24rsc

[options.entry_points]
console_scripts =
    ui24rsc = ui24rsc.cli:main
