[metadata]
name = ui24rsc
url = https://github.com/dmotte/ui24rsc
author = dmotte
license = MIT

description = Ui24R Snapshot Converter
long_description =
    ![icon](https://raw.githubusercontent.com/dmotte/ui24rsc/main/device.png)

    [![GitHub test workflow](https://img.shields.io/github/actions/workflow/status/dmotte/ui24rsc/test.yml?branch=main&logo=github&label=test&style=flat-square)](https://github.com/dmotte/ui24rsc/actions)
    [![PyPI](https://img.shields.io/pypi/v/ui24rsc?logo=python&style=flat-square)](https://pypi.org/project/ui24rsc/)

    **Ui24R** **S**napshot **C**onverter.

    Please refer to the [GitHub repository](https://github.com/dmotte/ui24rsc) for more information.
long_description_content_type = text/markdown

keywords = soundcraft ui24r yaml converter diff json tree command snapshot yml mixer dots structured full dotted dotted-format
classifiers =
    Intended Audience :: End Users/Desktop
    Environment :: Console
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Terminals
    Topic :: Utilities

# This version number will be replaced with the current git tag by the
# release.yml workflow
version = 0

[options]
install_requires =
    PyYAML >= 5.4.1
python_requires = >=3.9.1
packages = ui24rsc

[options.package_data]
* = *.yml

[options.entry_points]
console_scripts =
    ui24rsc = ui24rsc.cli:main
